--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-md-11 col-md-offset-1">
                     <div class="box">
-                        <p>Competition is the poison as we will show in realtime on a projected screen what is solved and by whom. The number of points that they gain trough the challenges is our never failing judgement metric because numbers never lie.</p>
+                        <p>Competition is the poison as we will show in realtime on a projected screen what is solved and by whom. The number of points that they gain through the challenges is our never failing judgement metric because numbers never lie.</p>
                         <p>They will have fun and code with passion, while dealing with all the challenges... if they can!</p>
                     </div>
                 </div>
