added sponsors, font improvements, text typos fixed

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Tap the Source - Dare to challenge</title>
+        <title>Tap the Source &mdash; Dare to challenge</title>
 
-        <link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-        <!--<link href="less/style.less" rel="stylesheet/less">
-        <script src="components/less.js/dist/less.min.js"></script>-->
+        <link href='http://fonts.googleapis.com/css?family=Lato:100|Open+Sans:400,600' rel='stylesheet' type='text/css'>
+
+        <!--<link href="css/style.css" rel="stylesheet">-->
+        <link href="less/style.less" rel="stylesheet/less">
+        <script src="components/less.js/dist/less.min.js"></script>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,9 +29,9 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-1">
                     <div class="half-ribbon primary">
-                        <h3><span class="secondary-color">When: </span><span class="lite-text">December 6<sup>th</sup></span></h3>
-                        <h3><span class="secondary-color">Where: </span><span class="lite-text">Bucharest</span></h3>
-                        <h3><span class="secondary-color">Why: </span><span class="lite-text">Dare to challenge!</span></h3>
+                        <h3><span class="secondary-color">When: </span>December 6<sup>th</sup></h3>
+                        <h3><span class="secondary-color">Where: </span>>ConnectHub, Bucharest</h3>
+                        <h3><span class="secondary-color">Why: </span>Dare to challenge!</h3>
                     </div>
                 </div>
                 <div class="col-md-6 col-md-offset-1">
@@ -54,7 +55,7 @@
                 </div>
                 <div class="col-md-6 col-md-offset-1">
                     <div class="box">
-                        <span class="primary-color">Tap the </span><span class="secondary-color">Source</span> is a <strong>national hackathon</strong> for software engineers, geeks and tech enthusiasts. We will portray innovative challenges for each <strong>passioned coder</strong> and we will try to quantify the knowledge participants posses on their area of expertise.
+                        <span class="primary-color">Tap the </span><span class="secondary-color">Source</span> is a <strong>national hackathon</strong> for software engineers, geeks and tech enthusiasts. We will portray innovative challenges for each <strong>passionate coder</strong> and we will try to quantify the knowledge participants' posses on their area of expertise.
                     </div>
                 </div>
             </div>
@@ -83,7 +84,7 @@
             <div class="row">
                 <div class="col-md-11 col-md-offset-1">
                     <div class="box">
-                        <p>Competition is the poison as we will show in realtime on a projected screen what is solved and by whom. The number of points that they gain through the challenges is our never failing judgement metric because numbers never lie.</p>
+                        <p>Competition is the poison as we will show in real-time on a projected screen what is solved and by whom. The number of points that they gain through the challenges is our never failing judgment metric because numbers never lie.</p>
                         <p>They will have fun and code with passion, while dealing with all the challenges... if they can!</p>
                     </div>
                 </div>
@@ -95,12 +96,20 @@
             </div>
             <div id="footer" class="row">
                 <div class="col-md-11 col-md-offset-1">
-                    <h3>Hosted by Softbinator</h3>
-                    <p>Softbinator is a community of software developers, offering conferences, workshops and talks that would help programmers achieve their full potential in the IT industry.</p>
+                    <div class="box">
+                        <h3>Hosted by Softbinator</h3>
+                        <p>Softbinator is a community of software developers, offering conferences, workshops and talks that would help programmers achieve their full potential in the IT industry.</p>
+                        <h3>Powered by</h3>
+                        <p class="powered-by">
+                            <a class="sponsor madrivo" href="http://www.madrivo.com">Madrivo</a>
+                            <span class="spacer">&</span>
+                            <a class="sponsor geekwanted" href="http://www.geekwanted.net">GeekWanted</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <script src="components/jquery/dist/jquery.min.js"></script>
-        <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <!--<script src="components/jquery/dist/jquery.min.js"></script>
+        <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>-->
     </body>
 </html>
