--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
         <link href='http://fonts.googleapis.com/css?family=Lato:100|Open+Sans:400,600' rel='stylesheet' type='text/css'>
 
-        <!--<link href="css/style.css" rel="stylesheet">-->
-        <link href="less/style.less" rel="stylesheet/less">
-        <script src="components/less.js/dist/less.min.js"></script>
+        <link href="css/style.css" rel="stylesheet">
+        <!--<link href="less/style.less" rel="stylesheet/less">
+        <script src="components/less.js/dist/less.min.js"></script>-->
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
