fixed small typo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col-md-4 col-md-offset-1">
                     <div class="half-ribbon primary">
                         <h3><span class="secondary-color">When: </span>December 6<sup>th</sup></h3>
-                        <h3><span class="secondary-color">Where: </span>>ConnectHub, Bucharest</h3>
+                        <h3><span class="secondary-color">Where: </span>ConnectHub, Bucharest</h3>
                         <h3><span class="secondary-color">Why: </span>Dare to challenge!</h3>
                     </div>
                 </div>
