small screen responsive fixes; sponsor fixes

--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
                         <p>Softbinator is a community of software developers, offering conferences, workshops and talks that would help programmers achieve their full potential in the IT industry.</p>
                         <h3>Powered by</h3>
                         <p class="powered-by">
-                            <a class="sponsor madrivo" href="http://www.madrivo.com">Madrivo</a>
+                            <a class="sponsor madrivo" href="http://www.madrivo.com">
+                                <img class="img-responsive" src="img/madrivo.jpg" alt="Madrivo">
+                            </a>
                             <span class="spacer">&</span>
-                            <a class="sponsor geekwanted" href="http://www.geekwanted.net">GeekWanted</a>
+                            <a class="sponsor geekwanted" href="http://www.geekwanted.net">
+                                <img class="img-responsive" src="img/geekwanted.jpg" alt="Geekwanted">
+                            </a>
                         </p>
                     </div>
                 </div>
@@ -111,5 +115,6 @@
         </div>
         <!--<script src="components/jquery/dist/jquery.min.js"></script>
         <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>-->
+        <script src="components/retina.js/dist/retina.min.js"></script>
     </body>
 </html>
