registration via qrcode added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <a href="javascript:alert('change me!');" class="btn-primary btn-block btn-lg btn">Be part of our<br> challenge!</a>
+                    <a href="#register" class="btn-primary btn-block btn-lg btn">Be part of our<br> challenge!</a>
                 </div>
             </div>
             <div class="row">
@@ -89,9 +89,20 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <a href="javascript:alert('change me!');" class="btn-primary btn-block btn-lg btn">Be part of our<br> challenge!</a>
+            <div id="register" class="row">
+                <div class="col-md-4 col-md-offset-1">
+                    <div class="half-ribbon primary">
+                        <h3>Tap the Source</h3>
+                        <h3><span class="lite-text lg">Register now</span></h3>
+                    </div>
+                    <div class="box">
+                        Get one step closer to the challenge by solving the puzzle behind this QR code.
+                    </div>
+                </div>
+                <div class="col-md-4 col-md-offset-2">
+                    <div class="box">
+                        <img src="https://chart.googleapis.com/chart?cht=qr&chl=aHR0cDovL2dvby5nbC9mb3Jtcy9pWUQ3M3BmN21n&chs=320x320&choe=UTF-8&chld=L|2">
+                    </div>
                 </div>
             </div>
             <div id="footer" class="row">
